tests/ui/derive_index_too_big_error_missing_msg.stderr
error: Missing field `msg`
 --> tests/ui/derive_index_too_big_error_missing_msg.rs:3:10
  |
3 | #[derive(IndexTooBigError)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `IndexTooBigError` (in Nightly builds, run with -Z macro-backtrace for more info)
