tests/ui/derive_index_too_big_error_missing_msg.rs
use index_type::IndexTooBigError;

#[derive(IndexTooBigError)]
struct MissingMessage;

fn main() {}
